TAG: webshare-tr8079-BP
DATE: 5/20/2008
STAFF: jsb
RELEASE: branch point
CHANGES:
1) branch point for phenoview release

TAG: webshare-4-0-0-18
DATE: 2/25/08
STAFF: mhall
RELEASE: Minor changes as a result of 4.0 release.

TAG: webshare-4-0-0-17
DATE: 2/12/08
STAFF: pf
RELEASE: Release of MGI 4.0

TAG: webshare-4-0-0-x (1 -> 16)
DATE: 2/7/08 (last)
STAFF: pf
RELEASE: MGI 4.0 alpha/beta tags

TAG: webshare-tr8087-x (BP, 1->15)
DATE: 12/20/07 (last)
STAFF: pf
RELEASE: 4.0 Branch point and branch tags

TAG: webshare-3-5-0-2
DATE: 06/02/2006
STAFF: jsb
RELEASE: beta
CHANGES:
1) fixed config files to now be checked in as *.defaults

TAG: webshare-3-5-0-1
DATE: 05/24/2006
STAFF: jsb
RELEASE: alpha
CHANGES:
1) added new style to images/mgi.css

TAG: webshare-3-5-0-0
DATE: 05/15/2006
STAFF: jsb
RELEASE: alpha
CHANGES:
1) merged tr7062 branch to trunk (MGI 3.5 release)

TAG: webshare-tr7062-BP
TAG: webshare-tr7062-1
DATE: 05/04/2006
STAFF: jsb
RELEASE: alpha
CHANGES:
1) changes to mgi.css for MGI 3.5 release

TAG: webshare-tr7062-BP
DATE: 02/28/2006
STAFF: jsb
RELEASE: branch point
CHANGES:
1) branch point for TR7062 (MGI 3.5 release)

TAG: webshare-3-4-2-0
DATE: 01/13/2006
STAFF: jsb
RELEASE: beta
CHANGES:
1) merged tr7193 branch to trunk

TAG: webshare-tr7193-1
DATE: 12/07/2005
STAFF: jsb
RELEASE: alpha
CHANGES:
1) updated components.cgi to ignore any deprecation warnings
2) updated config files to use public server's settings

TAG: webshare-tr7193-BP
DATE: 12/07/2005
STAFF: jsb
RELEASE: branch point
CHANGES:
1) branch point for python upgrade release (TR7193)