@@ -49,10 +49,10 @@ IS_PRODUCTION           0
 BUILDS_IN_SYNC          1
 
 # genome assembly version for marker coordinates
-ASSEMBLY_VERSION        36
+ASSEMBLY_VERSION        37
 
 # genome assembly version for SNP coordinates
-SNP_ASSEMBLY_VERSION    36
+SNP_ASSEMBLY_VERSION    37
 
 # if present, indicates that the Java WI should do no caching of pages
 NO_CACHE    1
@@ -128,5 +128,5 @@ MTB_URL                 http://tumor.informatics.jax.org/mtbwi/index.do
 ###--
 
 GENOMIC_PATH /net/orodruin-g/vol/hobbiton/data/research/
-NIBDBS /net/orodruin-g/vol/hobbiton/data/research/dna/mouse_build_36_nib
+NIBDBS /net/orodruin-g/vol/hobbiton/data/research/dna/mouse_build_37_nib
 
